// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compose-writer > produces stable YAML snapshot for modular selection 1`] = `
"networks:
  snapshot-modular:
    driver: "bridge"
    name: "snapshot-modular"
services:
  snapshot-modular-ami:
    container_name: "snapshot-modular-ami"
    image: "agentvoiceresponse/avr-ami"
    networks:
      snapshot-modular:
        aliases:
          - "ami"
          - "snapshot-modular-ami"
    restart: "always"
  snapshot-modular-asr-deepgram:
    container_name: "snapshot-modular-asr-deepgram"
    environment:
      DEEPGRAM_API_KEY: "sk-test-deepgram"
    image: "agentvoiceresponse/avr-asr-deepgram"
    networks:
      snapshot-modular:
        aliases:
          - "asr"
          - "snapshot-modular-asr-deepgram"
    restart: "always"
  snapshot-modular-asterisk:
    container_name: "snapshot-modular-asterisk"
    image: "agentvoiceresponse/avr-asterisk"
    networks:
      snapshot-modular:
        aliases:
          - "asterisk"
          - "snapshot-modular-asterisk"
    ports:
      - "5038:5038"
      - "5060:5060"
      - "8088:8088"
      - "10000-20000:10000-20000/udp"
    restart: "always"
    volumes:
      - "./asterisk/manager.conf:/etc/asterisk/my_manager.conf:ro"
      - "./asterisk/pjsip.conf:/etc/asterisk/my_pjsip.conf:ro"
      - "./asterisk/extensions.conf:/etc/asterisk/my_extensions.conf:ro"
      - "./asterisk/queues.conf:/etc/asterisk/my_queues.conf:ro"
      - "./asterisk/ari.conf:/etc/asterisk/my_ari.conf:ro"
  snapshot-modular-core:
    container_name: "snapshot-modular-core"
    image: "agentvoiceresponse/avr-core"
    networks:
      snapshot-modular:
        aliases:
          - "core"
          - "snapshot-modular-core"
    restart: "always"
  snapshot-modular-llm-openai:
    container_name: "snapshot-modular-llm-openai"
    environment:
      OPENAI_API_KEY: "sk-test-openai"
    image: "agentvoiceresponse/avr-llm-openai"
    networks:
      snapshot-modular:
        aliases:
          - "llm"
          - "snapshot-modular-llm-openai"
    restart: "always"
  snapshot-modular-tts-elevenlabs:
    container_name: "snapshot-modular-tts-elevenlabs"
    environment:
      ELEVENLABS_API_KEY: "sk-test-elevenlabs"
    networks:
      snapshot-modular:
        aliases:
          - "tts"
          - "snapshot-modular-tts-elevenlabs"
    restart: "always"
version: "3.9"
"
`;

exports[`compose-writer > produces stable YAML snapshot for sts selection 1`] = `
"networks:
  snapshot-sts:
    driver: "bridge"
    name: "snapshot-sts"
services:
  snapshot-sts-ami:
    container_name: "snapshot-sts-ami"
    image: "agentvoiceresponse/avr-ami"
    networks:
      snapshot-sts:
        aliases:
          - "ami"
          - "snapshot-sts-ami"
    restart: "always"
  snapshot-sts-asterisk:
    container_name: "snapshot-sts-asterisk"
    image: "agentvoiceresponse/avr-asterisk"
    networks:
      snapshot-sts:
        aliases:
          - "asterisk"
          - "snapshot-sts-asterisk"
    ports:
      - "5038:5038"
      - "5060:5060"
      - "8088:8088"
      - "10000-20000:10000-20000/udp"
    restart: "always"
    volumes:
      - "./asterisk/manager.conf:/etc/asterisk/my_manager.conf:ro"
      - "./asterisk/pjsip.conf:/etc/asterisk/my_pjsip.conf:ro"
      - "./asterisk/extensions.conf:/etc/asterisk/my_extensions.conf:ro"
      - "./asterisk/queues.conf:/etc/asterisk/my_queues.conf:ro"
      - "./asterisk/ari.conf:/etc/asterisk/my_ari.conf:ro"
  snapshot-sts-core:
    container_name: "snapshot-sts-core"
    image: "agentvoiceresponse/avr-core"
    networks:
      snapshot-sts:
        aliases:
          - "core"
          - "snapshot-sts-core"
    restart: "always"
  snapshot-sts-sts-openai:
    container_name: "snapshot-sts-sts-openai"
    environment:
      OPENAI_API_KEY: "sk-test-openai"
    image: "agentvoiceresponse/avr-sts-openai"
    networks:
      snapshot-sts:
        aliases:
          - "sts"
          - "snapshot-sts-sts-openai"
    restart: "always"
version: "3.9"
"
`;
